<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <!-- Main Content -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <!-- Top Bar with Logo -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white">

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/logo_full_brand"
                    android:contentDescription="@string/logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <TextView
                    android:id="@+id/tv_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/pink"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/img_logo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    android:layout_marginStart="8dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Search Bar -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/img_menu"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/menu"
                    android:contentDescription="@string/menu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSearch"
                    android:queryHint="search"
                    app:iconifiedByDefault="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_menu"
                    app:layout_constraintTop_toTopOf="parent"
                    app:searchIcon="@drawable/search"
                    app:queryBackground="@android:color/transparent"
                    app:submitBackground="@android:color/transparent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Main Content -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- File List Area -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_files"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <!-- Floating Action Button -->
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@drawable/upload"
                    app:backgroundTint="@color/pink"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <!-- Bottom Navigation Bar -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            android:padding="8dp">

            <EditText
                android:id="@+id/et_download_filename"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="enter_filename"
                android:inputType="text"
                app:layout_constraintEnd_toStartOf="@id/btn_download"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/btn_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="download"
                android:drawableStart="@drawable/download_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>
